--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 
 {% if pred %}
 <h3>Respective Image Uploaded </h3>
-<h3>% Of To Be Original : {{pred}} ({{score}}%)</h3>
+<h3>STATUS : {{pred}} ({{score}}%)</h3>
 <h2>Note: The percentage should be above 50 to consider as Original(NOT TAMPERED)</h2>
 {% endif %}
 
